RESOLVED FIXED141746
REGRESSION(r180235): It broke the !ENABLE(PROMISES) build
https://bugs.webkit.org/show_bug.cgi?id=141746
Summary REGRESSION(r180235): It broke the !ENABLE(PROMISES) build
Csaba Osztrogonác
Reported 2015-02-17 23:56:30 PST
build log: ../../Source/JavaScriptCore/inspector/JSInjectedScriptHost.cpp: In member function 'JSC::JSValue Inspector::JSInjectedScriptHost::getInternalProperties(JSC::ExecState*)': ../../Source/JavaScriptCore/inspector/JSInjectedScriptHost.cpp:212:9: error: 'JSPromise' was not declared in this scope The problem is that JSPromise type is used unconditionally, but it is defined inside ENABLE(PROMISES) guard.
Attachments
Joseph Pecoraro
Comment 1 2015-02-18 00:56:04 PST
Oops, somehow I didn't even notice that this was behind an enable flag. I'll fix. Thanks for alerting me.
Joseph Pecoraro
Comment 2 2015-02-18 00:58:07 PST
Note You need to log in before you can comment on or make changes to this bug.