REGRESSION(r180235): It broke the !ENABLE(PROMISES) build https://bugs.webkit.org/show_bug.cgi?id=141746

Unreviewed build fix.

* inspector/JSInjectedScriptHost.cpp:
(Inspector::JSInjectedScriptHost::getInternalProperties):
Wrap JSPromise related code in ENABLE(PROMISES) guard.

Canonical link: https://commits.webkit.org/159760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180259 268f45cc-cd09-0410-ab3c-d52691b4dbfc