Source/JavaScriptCore/inspector/JSInjectedScriptHost.cpp
@@ -35,7 +35,6 @@
 #include "JSFunction.h"
 #include "JSInjectedScriptHostPrototype.h"
 #include "JSMap.h"
-#include "JSPromise.h"
 #include "JSSet.h"
 #include "JSTypedArrays.h"
 #include "JSWeakMap.h"
@@ -44,6 +43,10 @@
 #include "SourceCode.h"
 #include "TypedArrayInlines.h"
 #include "WeakMapData.h"
+
+#if ENABLE(PROMISES)
+#include "JSPromise.h"
+#endif
 
 using namespace JSC;
 
@@ -209,6 +212,7 @@ JSValue JSInjectedScriptHost::getInternalProperties(ExecState* exec)
 
     JSValue value = exec->uncheckedArgument(0);
 
+#if ENABLE(PROMISES)
     if (JSPromise* promise = jsDynamicCast<JSPromise*>(value)) {
         unsigned index = 0;
         JSArray* array = constructEmptyArray(exec, nullptr);
@@ -228,6 +232,7 @@ JSValue JSInjectedScriptHost::getInternalProperties(ExecState* exec)
         // FIXME: <https://webkit.org/b/141664> Web Inspector: ES6: Improved Support for Promises - Promise Reactions
         return array;
     }
+#endif
 
     if (JSBoundFunction* boundFunction = jsDynamicCast<JSBoundFunction*>(value)) {
         unsigned index = 0;
